[package]
name = "cfg_matrix"
license = "MIT"
description = "Procedural macro to generate permutations of supertraits based on cfg flags."
repository = "https://github.com/peperworx/cfg_matrix"
categories = ["rust-patterns"]
keywords = ["macros", "generics", "supertraits", "traits", "features"]
readme = "README.md"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "proc-macro"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true